--- a/Darshit Shir All Tasks folder/js tasks/js task1/index.html
+++ b/Darshit Shir All Tasks folder/js tasks/js task1/index.html
@@ -8,9 +8,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css" rel="stylesheet" type="text/css" />
+    <link
+        href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css"
+        rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.js"></script>
+    <script
+        src="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -18,7 +21,7 @@
 
     <div class="container">
         <div class="col-lg-12 mt-4">
-            <h1 class="text-center">Form</h1>
+            <h1 class="text-center text-white">FORM</h1>
         </div>
         <form onsubmit="return false">
             <div class="row mb-4 mt-5">
@@ -42,7 +45,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-12 form-outline mb-4">
                     <label class="form-label fw-bold fs-5 ">Graduation Year : </label>
-                    <div id="yearPicker">
+                    <div id="yearPicker0">
                         <input type="text" class="form-control" placeholder="Year">
                     </div>
                 </div>
@@ -57,25 +60,23 @@
                     <input type="password" class="form-control" placeholder="Password" />
                 </div>
             </div>
-
             <div class="form-outline mb-4">
                 <label class="form-label fw-bold fs-5 ">Address :</label>
                 <textarea class="form-control" rows="4" placeholder="Address"></textarea>
             </div>
         </form>
 
-        <div class="d-flex mt-3 justify-content-between">
-            <div></div>
+        <div class="d-flex mt-5 justify-content-between">
             <div>
-                <h1>Education</h1>
+                <h1 class="text-white">Education</h1>
             </div>
-            <div onclick="addRow()" role="button">
-                <i class="fa-sharp fa-solid fa-square-plus fs-1"></i>
+            <div>
+                <button class="button buttonAdd" style="--clr:#39FF14" onclick="addRow(false)"><span>Add</span><i></i></button>
             </div>
         </div>
-        <div class="my-3 card border-0 table-responsive">
-            <table class="table table-borderless table-responsive " id="table">
-                <thead class="fw-bold fs-5">
+        <div class="card border-0 table-responsive">
+            <table class="table table-borderless table-responsive mt-4" id="table">
+                <thead class="text-white fw-bold fs-5">
                     <th>Degree</th>
                     <th>College</th>
                     <th>Start Date</th>
@@ -85,37 +86,12 @@
                     <th></th>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><input type="text" class="form-control" placeholder="Degree"></td>
-                        <td><input type="text" class="form-control" placeholder="College"></td>
-                        <td><input type="month" class="form-control"></td>
-                        <td><input type="month" class="form-control"></td>
-                        <td><input type="number" class="form-control" placeholder="Percentage"></td>
-                        <td><input type="number" class="form-control" placeholder="Backlog"></td>
-                        <td><button class="btn-outline-danger border-0 rounded px-2 remove-btn py-2">
-                                <i class="fa-sharp fa-solid fa-trash"></i>
-                            </button>
-                        </td>
-
-
-                    </tr>
-                    <tr>
-                        <td><input type="text" class="form-control" placeholder="Degree"></td>
-                        <td><input type="text" class="form-control" placeholder="College"></td>
-                        <td><input type="month" class="form-control"></td>
-                        <td><input type="month" class="form-control"></td>
-                        <td><input type="number" class="form-control" placeholder="Percentage"></td>
-                        <td><input type="number" class="form-control" placeholder="Backlog"></td>
-                        <td><button class="btn-outline-danger border-0 rounded px-2 remove-btn py-2">
-                                <i class="fa-sharp fa-solid fa-trash"></i>
-                            </button>
-                        </td>
-
-                    </tr>
                 </tbody>
             </table>
         </div>
-    </div>
+        <div class="text-center">
+            <button class="button buttonSubmit" style="--clr:#FF44CC"><span>Submit</span><i></i></button>
+        </div>
     </div>
 
     <script src="./js/script.js"></script>
