--- a/Darshit Shir All Tasks folder/js tasks/js task6/index.html
+++ b/Darshit Shir All Tasks folder/js tasks/js task6/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darshit</title>
+    <title>js task6</title>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -20,7 +20,7 @@
 
         <!-- modal -->
         <div class="my-3">
-            <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#myModal">
+            <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#myModal" onclick="addBtnTable()">
                 Add Row
             </button>
         </div>
@@ -44,22 +44,21 @@
                                     <div class="form-outline">
                                         <label class="form-label fw-bold fs-5">First Name :</label>
                                         <input type="text" class="form-control" id="fName" placeholder="First Name"
-                                            pattern="[a-zA-Z]+"/>
+                                            pattern="[a-zA-Z]+" />
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
                                     <div class="form-outline">
                                         <label class="form-label fw-bold fs-5 mt-lg-0 mt-md-4 ">Last Name :</label>
                                         <input type="text" class="form-control" id="lName" placeholder="Last Name"
-                                            pattern="[a-zA-Z]+"/>
+                                            pattern="[a-zA-Z]+" />
                                     </div>
                                 </div>
                             </div>
                             <div class="row my-3">
                                 <div class="col-lg-6 col-sm-12 form-outline">
                                     <label class="form-label fw-bold fs-5 ">Date Of Birth : </label>
-                                    <input type="date" class="form-control" id="dateOfBirth" placeholder="mm/dd/yyyy"
-                                        max="2001-12-31"/>
+                                    <input type="date" class="form-control" id="dateOfBirth" max="2001-12-31" />
                                 </div>
                                 <div class="col-lg-6 col-sm-12 form-outline">
                                     <label class="form-label fw-bold fs-5 ">Graduation Year : </label>
@@ -74,8 +73,7 @@
                             </div>
                             <div class="form-outline mb-4">
                                 <label class="form-label fw-bold fs-5 ">Address :</label>
-                                <textarea class="form-control" rows="4" id="address"
-                                    placeholder="Address"></textarea>
+                                <textarea class="form-control" rows="4" id="address" placeholder="Address"></textarea>
                             </div>
                             <div class="d-flex mt-5 justify-content-between">
                                 <div>
@@ -103,7 +101,7 @@
                     <!-- Modal footer -->
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary px-5 py-2" id="addRow"
-                            onclick="submitBtn()">Submit</button>
+                            onclick="submitBtn('submit')">Submit</button>
                     </div>
 
                 </div>
@@ -131,7 +129,6 @@
     <script type="module" src="./js/ajaxCall.js"></script>
     <script src="./js/script.js"></script>
     <script src="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.min.js"></script>
-    <script src="./js/customAlert.js"></script>
 
 </body>
 
